refactor(optimizer-analyzer): typed OperationType/Status, polish cadence + TableOperation
The analyzer was using raw Strings everywhere for operation type and status.
Per-layer types: introduce analyzer-internal OperationType and OperationStatus
enums in apps/optimizer-analyzer/model and convert at the entity boundary.
The wire API (services/optimizer/api/model) and DB columns (apps/optimizer
entity rows) keep their own representations and are unaffected.

Changes:
- New enums OperationType and OperationStatus in the analyzer model package.
- TableOperation: operationType and status become enums. from(row) parses the
  String columns; toRow() emits .name() back. from() and pending() share a
  private build() factory.
- TableOperation javadocs: drop "denormalized for display" wording.
- OperationAnalyzer.getOperationType returns OperationType.
- AnalyzerRunner: filter parameter and per-type maps are keyed on
  OperationType; calls to repos still pass the String .name().
- CadencePolicy.shouldSchedule: switch on OperationStatus is exhaustive (now
  including CANCELED), unknown values throw IllegalStateException, and the
  SCHEDULED branch has an inline comment explaining the two cases.
- OrphanFilesDeletionAnalyzer: returns the enum.
- Tests updated to construct enum values; OFD test helper takes the enum.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>